# RAG-llm

./: .env  Config.py  Creating_Chunks.py  Embedding.py  LLaMa.py  README.md  Web_Scraping.py  main.py  pyproject.toml
APIS/: Client_Side.py  User_side.py
